--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "build": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +18,8 @@
     "express": "^5.1.0",
     "resend": "^4.5.1",
     "twilio": "^5.6.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
