--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,14 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "resend": "^4.5.1",
+    "supabase": "^2.22.12",
     "twilio": "^5.6.1"
   },
   "devDependencies": {
